# ds_python_scaffold_1

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/docs/: mkdocs.yml
{{cookiecutter.project_slug}}/docs/docs/: index.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  config.py  dataset.py  features.py  plots.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/running/: predict.py  train.py
