[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{cookiecutter.project_slug}}
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Alexandre Surkus-Castro, Infinity6.ai" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = [{{cookiecutter.project_slug}}]
force_sort_within_sections = true
